--- a/public/locales/en/video.json
+++ b/public/locales/en/video.json
@@ -9,17 +9,17 @@
   "current_video": "Current video",
   "episode": "episode",
   "episodes": "Episodes",
-  "favorite": "Favorite",
+  "favorite": "Lisää suosikki",
   "favorites_warning": "Maximum amount of favorite videos exceeded. You can only add up to {{maxCount}} favorite videos. Please delete one and repeat the operation.",
   "live": "Live",
   "remove_from_favorites": "Remove from favorites",
   "season": "season",
   "season_number_filter_template": "Season {{seasonNumber}}",
   "series_error": "An error occurred while requesting series",
-  "share": "Share",
+  "share": "Jaa",
   "share_video": "Share this video",
   "sign_up_to_start_watching": "Sign up to start watching!",
-  "start_watching": "Start watching",
+  "start_watching": "Aloita katselu",
   "total_episodes_one": "{{count}} episode",
   "total_episodes_other": "{{count}} episodes",
   "trailer": "Trailer",
