fix: series to print Sarja instead of sarjat

--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -21,7 +21,7 @@
   "optional": "(Optional)",
   "play_item": "Play {{title}}",
   "scheduled": "Scheduled",
-  "series": "Sarjat",
+  "series": "Sarja",
   "sign_in": "Kirjaudu sisään",
   "sign_up": "Kirjaudu ulos",
   "slide_left": "Slide left",
