chore: Finnish translations (#36)
* chore: Finnish translations

* chore(fix): missing translations

* chore(fix): typos

* chore: error.json translations

* chore(fix): applikaatioissa -> sovelluksissa

* chore: translation for export_data_error

---------

Co-authored-by: Phu Nguyen <60187861+phuwin95@users.noreply.github.com>

--- a/public/locales/fi/account.json
+++ b/public/locales/fi/account.json
@@ -1,212 +1,212 @@
 {
   "cancel_subscription": {
     "explanation": "You will be unsubscribed from your current plan by clicking the unsubscribe button below.",
-    "no_thanks": "No, thanks",
-    "title": "We are sorry to see you go.",
-    "unknown_error_occurred": "An unknown error occurred, please try again later.",
-    "unsubscribe": "Unsubscribe"
+    "no_thanks": "Ei kitos",
+    "title": "Harmillista, että päätit peruuttaa tilauksesi.",
+    "unknown_error_occurred": "Tuntematon virhe, yritä myöhemmin uudelleen.",
+    "unsubscribe": "Peruuta tilaus"
   },
   "checkout": {
-    "applicable_tax": "Applicable tax ({{taxRate}}%)",
-    "card_holder_name": "Cardholder name",
-    "close": "Close",
-    "continue": "Continue",
-    "coupon_applied": "Your coupon code has been applied",
-    "coupon_discount": "Coupon discount",
-    "coupon_not_valid": "Coupon code is not valid",
-    "credit_card": "Credit card",
-    "credit_card_name": "Credit card name",
-    "days_trial_one": "You will be charged tomorrow.",
-    "days_trial_other": "You will be charged after {{count}} days.",
+    "applicable_tax": "ALV ({{taxRate}}%)",
+    "card_holder_name": "Kortinhaltijan nimi",
+    "close": "Sulje",
+    "continue": "Jatka",
+    "coupon_applied": "Kuponki lunastettu",
+    "coupon_discount": "Kuponkialennus",
+    "coupon_not_valid": "Kuponki ei ole voimassa",
+    "credit_card": "Luottokortti",
+    "credit_card_name": "Luottokortin myöntäjä",
+    "days_trial_one": "Maksu laskutetaan huomenna.",
+    "days_trial_other": "Maksu laskutetaan {{count}} päivän päästä.",
     "discount_period_one": "For the first {{period}}",
     "discount_period_other": "For the first {{count}} {{period}}",
-    "free_trial_discount": "Free trial",
-    "go_back_to_checkout": "Go back to checkout",
-    "invalid_card_expiry": "Invalid card expiry",
-    "invalid_card_number": "Invalid card number",
-    "invalid_cvc_number": "Invalid CVC number",
-    "monthly": "Monthly subscription",
-    "no_payment_needed": "No payment needed",
-    "payment_cancelled": "Payment cancelled",
-    "payment_cancelled_message": "You have cancelled the payment",
-    "payment_error": "Payment failed",
-    "payment_method": "Payment method",
-    "payment_method_fee": "Payment method fee",
+    "free_trial_discount": "Ilmainen kokeilujakso",
+    "go_back_to_checkout": "Palaa kassalle",
+    "invalid_card_expiry": "Kortin erääntymispäivä väärin",
+    "invalid_card_number": "Viallinen kortin numero",
+    "invalid_cvc_number": "Väärä turvakoodi (CVC)",
+    "monthly": "Kuukausitilaus",
+    "no_payment_needed": "Maksua ei vaadita",
+    "payment_cancelled": "Maksu peruutettu",
+    "payment_cancelled_message": "Olet peruuttanut maksutapahtuman",
+    "payment_error": "Maksu epäonnistui",
+    "payment_method": "Maksutapa",
+    "payment_method_fee": "Maksutavan lisäkustannukset",
     "paypal": "PayPal",
-    "paypal_instructions": "Clicking 'continue' will bring you to the PayPal site.",
+    "paypal_instructions": "Näpäyttämällä 'jatka' siirryt PayPal-palveluun.",
     "periods_trial_one": "You will be charged after one {{period}}.",
     "periods_trial_other": "You will be charged after {{count}} {{period}}.",
-    "redeem_coupon": "Redeem coupon",
-    "save": "Save",
-    "start_watching": "Start watching ({{countdown}})",
-    "total_price": "Total",
-    "upgrade_error": "Failed to update subscription!",
+    "redeem_coupon": "Lunasta kuponki",
+    "save": "Tallenna",
+    "start_watching": "Aloita katselu ({{countdown}})",
+    "total_price": "Yhteensä",
+    "upgrade_error": "Tilauksen päivitys epäonnistui!",
     "upgrade_error_message": "Due to an unknown error the update has failed. Please contact an administrator.",
-    "upgrade_pending": "Subscription updated!",
-    "upgrade_pending_message": "Your subscription will be updated after the next billing date.",
-    "upgrade_success": "Subscription updated!",
-    "upgrade_success_message": "Your subscription is updated and can be used immediately.",
-    "waiting_for_payment": "Waiting for payment",
-    "welcome_description": "Thank you for subscribing to {{siteName}}. Please enjoy all our content.",
-    "welcome_title": "Welcome to {{siteName}}",
-    "yearly": "Yearly subscription"
+    "upgrade_pending": "Tilaus päivitetty!",
+    "upgrade_pending_message": "Tilauksesi päivitetään seuraavana laskutuspäivänä.",
+    "upgrade_success": "Tilaus päivitetty!",
+    "upgrade_success_message": "Tilauksesi on päivitetty ja päivitys astuu voimaan välittömästi.",
+    "waiting_for_payment": "Odottaa maksua",
+    "welcome_description": "Kiitos rekisteröitymisestä {{siteName}} palveluun. Antoisia katselu hetkiä.",
+    "welcome_title": "Tervetuloa {{siteName}} palveluun",
+    "yearly": "Vuositilaus"
   },
   "choose_offer": {
     "benefits": {
-      "cancel_anytime": "Cancel anytime",
-      "first_days_free_one": "First day free",
-      "first_days_free_other": "First {{count}} days free",
-      "first_periods_free_one": "First {{period}} free",
-      "first_periods_free_other": "First {{count}} {{period}} free",
-      "watch_on_all_devices": "Watch on all devices"
+      "cancel_anytime": "Voit peruuttaa milloin tahansa",
+      "first_days_free_one": "Ensimmäinen päivä ilmaiseksi",
+      "first_days_free_other": "Ensimmäiset {{count}} päivät ilmaiseksi",
+      "first_periods_free_one": "Ensimmäinen {{period}} ilmaiseksi",
+      "first_periods_free_other": "Ensimmäiset {{count}} {{period}} ilmaiseksi",
+      "watch_on_all_devices": "Katsele millä tahansa laitteella"
     },
-    "continue": "Continue",
-    "field_required": "This field is required",
-    "monthly": "Monthly",
-    "monthly_subscription": "Monthly subscription",
-    "no_pricing_available": "There are no pricing options available at the moment.",
-    "offer_not_found": "Offer not found, please try reloading the page",
-    "one_time_only": "This video",
-    "subscription": "Subscription",
-    "title": "Choose plan",
-    "tvod_access_one": "{{count}} {{period}} access",
-    "tvod_access_other": "{{count}} {{period}} access",
-    "watch_this_on_platform": "Watch this on {{siteName}}",
-    "yearly": "Yearly",
-    "yearly_subscription": "Yearly subscription"
+    "continue": "Jatka",
+    "field_required": "Tämä on pakollinen kenttä",
+    "monthly": "Kuukausittainen",
+    "monthly_subscription": "Kuukausitilaus",
+    "no_pricing_available": "Hinnoittelu vaihtoehtoja ei ole saatavilla tällä hetkellä.",
+    "offer_not_found": "Tilausta ei löytynyt, ole hyvä ja päivitä sivu.",
+    "one_time_only": "Tämä video",
+    "subscription": "Tilaus",
+    "title": "Valitse sunnitelma",
+    "tvod_access_one": "{{count}} {{period}} pääsy",
+    "tvod_access_other": "{{count}} {{period}} pääsy",
+    "watch_this_on_platform": "Sisältö katseltavissa palvelussa {{siteName}}",
+    "yearly": "Vuosittainen",
+    "yearly_subscription": "Vuositilaus"
   },
   "login": {
-    "email": "Email",
-    "facebook": "Sign in with Facebook",
-    "field_is_not_valid_email": "Please re-enter your email details and try again.",
-    "field_required": "This field is required",
-    "forgot_password": "Forgot password?",
-    "google": "Sign in with Google",
-    "hide_password": "Hide password",
-    "not_registered": "New to {{siteName}}?",
-    "password": "Password",
-    "sign_in": "Sign in",
-    "sign_up": "Sign up",
+    "email": "Sähköpostiosoite",
+    "facebook": "Kirjaudu sisään Facebook tunnuksilla",
+    "field_is_not_valid_email": "Ole hyvä ja täyty sähköpostiosoitteesi uudelleen ja yritä uudelleen.",
+    "field_required": "Tämä on pakollinen kenttä",
+    "forgot_password": "Unohtuiko salasana?",
+    "google": "Kirjaudu sisään Google tunnuksilla",
+    "hide_password": "Piilota salasana",
+    "not_registered": "Uusi käyttäjä palvelussa {{siteName}}?",
+    "password": "Salasana",
+    "sign_in": "Kirjaudu",
+    "sign_up": "Kirjaudu ulos",
     "simultaneous_logins": "The maximum number of active sessions for this account has been reached. Signing in here will sign you out from another session or device.",
-    "twitter": "Sign in with Twitter",
-    "unexpected_error": "An unexpected error occurred.",
-    "view_password": "View password",
-    "wrong_combination": "Incorrect email/password combination",
-    "wrong_email": "Please check your email and try again."
+    "twitter": "Kirjaudu sisään X tunnuksilla",
+    "unexpected_error": "Odottamaton virhe.",
+    "view_password": "Näytä salasana",
+    "wrong_combination": "Virheellinen sähköpostiosoite tai salasana",
+    "wrong_email": "Tarkista sähköpostiosoitteesi ja yritä uudelleen."
   },
   "payment": {
-    "back_to_profile": "Back to profile",
-    "credit_card": "Credit card",
-    "edit_card": "Edit card",
+    "back_to_profile": "Takaisin profiiliin",
+    "credit_card": "Luottokortti",
+    "edit_card": "Muokka korttitietoja",
     "paypal": "PayPal",
-    "update_payment_details": "Update payment details",
-    "update_payment_success": "Your payment details have been updated"
+    "update_payment_details": "Päivitä maksutiedot",
+    "update_payment_success": "Maksutiedot päivitetty"
   },
   "periods": {
-    "day_one": "day",
-    "day_other": "days",
-    "month": "monthly",
-    "month_one": "month",
-    "month_other": "months",
-    "week_one": "week",
-    "week_other": "weeks",
-    "year": "yearly",
-    "year_one": "year",
-    "year_other": "years"
+    "day_one": "päivä",
+    "day_other": "päivää",
+    "month": "kuukausittain",
+    "month_one": "kuukausi",
+    "month_other": "kuukausia",
+    "week_one": "viikko",
+    "week_other": "viikkoja",
+    "year": "vuosittainen",
+    "year_one": "vuosi",
+    "year_other": "vuosia"
   },
   "personal_details": {
-    "address": "Address line 1",
-    "address2": "Address line 2",
-    "birth_date": "Date of birth",
-    "birth_date_not_valid": "Birth of date is not a valid date",
-    "city": "City",
-    "company_name": "Company name",
-    "continue": "Continue",
+    "address": "Katuosoite",
+    "address2": "Osoite lisärivi",
+    "birth_date": "Syntymäaika",
+    "birth_date_not_valid": "Syntymäaika ei ole päivämäärä",
+    "city": "Paikkakunta",
+    "company_name": "Yrityksen nimi",
+    "continue": "Jatka",
     "fist_name": "First name",
-    "last_name": "Last name",
-    "phone_number": "Phone number",
-    "post_code": "Zip/Postal Code",
-    "select_answer": "Choose an option",
-    "state": "State/Province/Region",
-    "this_field_is_required": "This field is required",
-    "title": "Personal details"
+    "last_name": "Sukunimi",
+    "phone_number": "Puhelinnumero",
+    "post_code": "Postinumero",
+    "select_answer": "Valitse",
+    "state": "Alue",
+    "this_field_is_required": "Tämä on pakollinen kenttä",
+    "title": "Yhteystiedot"
   },
   "registration": {
-    "already_account": "Already have an account?",
-    "consent_required": "This field is required",
-    "continue": "Continue",
-    "email": "Email",
-    "email_updates": "Yes, I want to receive {{siteName}} updates by email.",
-    "failed_to_create": "An error occurred. Please try again later.",
-    "field_is_not_valid_email": "Please re-enter your email details",
-    "field_required": "This field is required",
-    "hide_password": "Hide password",
-    "invalid_password": "Use a minimum of 8 characters (case sensitive) with at least one number",
-    "password": "Password",
-    "password_helper_text": "Use a minimum of 8 characters (case sensitive) with at least one number",
+    "already_account": "Oletko jo rekisteröitynyt?",
+    "consent_required": "Tämä on pakollinen kenttä",
+    "continue": "Jatka",
+    "email": "Sähköpostiosoite",
+    "email_updates": "Kyllä, haluan vastaanottaa päivitys viestejä palvelusta {{siteName}} sähköpostiini.",
+    "failed_to_create": "Tapahtui virhe, yritä myöhemmin uudelleen.",
+    "field_is_not_valid_email": "Vire sähköpostiosoitteessa",
+    "field_required": "Tämä on pakollinen kenttä",
+    "hide_password": "Piilota salasana",
+    "invalid_password": "Salasanan täytyy sisältää vähintään 8 isoa tai pientä kirjainta ja vähintään yksi numero.",
+    "password": "Salasana",
+    "password_helper_text": "Salasanan täytyy sisältää vähintään 8 isoa tai pientä kirjainta ja vähintään yksi numero.",
     "password_strength": {
-      "fair": "Fair",
+      "fair": "Kohtalainen",
       "invalid": "",
-      "strong": "Strong",
-      "very_strong": "Very strong",
-      "weak": "Weak"
+      "strong": "Vahva",
+      "very_strong": "Erittäin vahva",
+      "weak": "Heikko"
     },
-    "sign_up": "Sign up",
-    "terms_consent": "I accept the {{termsUrl}} of JW Player.",
-    "user_exists": "There is already a user with this email address",
-    "view_password": "View password"
+    "sign_up": "Rekisteröidy",
+    "terms_consent": "Hyväksyn palvelun käyttöehdot {{termsUrl}}.",
+    "user_exists": "Käyttäjätunnus on jo olemassa",
+    "view_password": "Näytä salasana"
   },
   "renew_subscription": {
-    "explanation": "By clicking the button below you can renew your plan.",
-    "next_billing_date_on": "Next billing date will be {{date}}",
-    "no_thanks": "No, thanks",
-    "renew_subscription": "Renew subscription",
-    "renew_your_subscription": "Renew your subscription",
-    "unknown_error_occurred": "An unknown error occurred!"
+    "explanation": "Klikkaamalla alla olevaa painiketta voit uusia suunnitelmasi.",
+    "next_billing_date_on": "Seuraava laskutuspäivä on {{date}}",
+    "no_thanks": "Ei kitos",
+    "renew_subscription": "Tilauksen uusiminen",
+    "renew_your_subscription": "Uusi tilauksesi",
+    "unknown_error_occurred": "Tapahtui odottamaton virhe!"
   },
   "reset": {
-    "back_login": "Back to login",
-    "confirm": "Confirm",
-    "email": "Email",
-    "email_me": "Email me",
-    "forgot_password": "Forgot password",
-    "forgot_text": "We will send you an email with instructions on how to reset your password.",
-    "hide_password": "Hide password",
-    "invalid_link": "Invalid link",
-    "invalid_password": "Invalid password",
-    "invalid_token": "The reset password link is invalid or has expired. Please try resetting your password again.",
-    "link_sent": "Password link sent",
-    "link_sent_text": "Please check your inbox at {{email}}",
-    "new_password": "New password",
-    "no": "No, thanks",
-    "not_sure": "Not sure that was the right email address?",
-    "old_password": "Old password",
-    "password": "Password",
-    "password_helper_text": "Use a minimum of 8 characters (case sensitive) with at least one number",
-    "password_reset": "Password reset",
+    "back_login": "Takaisin kirjautumiseen",
+    "confirm": "Vahvista",
+    "email": "Sähköpostiosoite",
+    "email_me": "Lähetä sähköpostilla",
+    "forgot_password": "Unohtuiko salasana?",
+    "forgot_text": "Lähetämme sinulle sähköpostin ohjeilla salasanan palauttamiseksi.",
+    "hide_password": "Piilota salasana",
+    "invalid_link": "Virheellinen linkki",
+    "invalid_password": "Virheellinen salasana",
+    "invalid_token": "Salasanan palautuslinkki on virheellinen tai vanhentunut. Yritä salasanan palauttamista uudelleen.",
+    "link_sent": "Salasanalinkki lähetetty",
+    "link_sent_text": "Tarkista sähköpostisi osoitteesta {{email}}",
+    "new_password": "Uusi salasana",
+    "no": "Ei kiitos",
+    "not_sure": "Epävarma oliko se oikea sähköpostiosoite?",
+    "old_password": "Vanha salasana",
+    "password": "Salasana",
+    "password_helper_text": "Käytä vähintään 8 merkkiä (kirjainkoosta riippuvainen) sisältäen vähintään yhden numeron",
+    "password_reset": "Salasanan palautus",
     "password_reset_text": "",
-    "passwords_do_not_match": "Passwords do not match",
-    "repeat_new_password": "Repeat new password",
-    "reset_password": "Edit Password",
-    "reset_password_token": "Token",
-    "text": "If you want to edit your password, click 'YES, Reset' to receive password reset instruction on your mail",
-    "try_again": "Try again",
-    "view_password": "View password",
-    "wrong_email": "Wrong email",
-    "yes": "Yes, reset"
+    "passwords_do_not_match": "Salasanat eivät täsmää",
+    "repeat_new_password": "Toista uusi salasana",
+    "reset_password": "Muokkaa salasanaa",
+    "reset_password_token": "Tunniste",
+    "text": "Jos haluat muokata salasanaasi, klikkaa 'KYLLÄ, Palauta' saadaksesi salasanan palautusohjeet sähköpostiisi",
+    "try_again": "Yritä uudelleen",
+    "view_password": "Näytä salasana",
+    "wrong_email": "Väärä sähköpostiosoite",
+    "yes": "Kyllä, palauta"
   },
   "subscription_cancelled": {
-    "message": "You have been successfully unsubscribed. Your current plan will expire on {{date}}",
-    "return_to_profile": "Return to profile",
-    "title": "Miss you already."
+    "message": "Olet peruuttanut tilauksesi onnistuneesti. Nykyinen suunnitelmasi päättyy {{date}}",
+    "return_to_profile": "Palaa profiiliin",
+    "title": "Ikävä sinua jo nyt."
   },
   "subscription_renewed": {
-    "back_to_profile": "Back to profile",
-    "message": "You have been successfully resubscribed. Your fee will be {{price}} starting from {{date}}",
-    "title": "Your subscription has been renewed"
+    "back_to_profile": "Takaisin profiiliin",
+    "message": "Olet uusinut tilauksesi onnistuneesti. Maksusi on {{price}} alkaen {{date}}",
+    "title": "Tilauksesi on uusittu"
   },
   "validation": {
-    "first_name": "firstName can have max 50 characters.",
-    "last_name": "lastName can have max 50 characters."
+    "first_name": "Etunimi voi olla enintään 50 merkkiä pitkä.",
+    "last_name": "Sukunimi voi olla enintään 50 merkkiä pitkä."
   }
 }
