--- a/public/locales/fi/user.json
+++ b/public/locales/fi/user.json
@@ -1,137 +1,137 @@
 {
   "account": {
-    "about_you": "Profile info",
-    "add_profile": "Add profile",
-    "cancel": "Cancel",
-    "confirm_password": "Confirm password",
-    "continue": "Continue",
-    "delete": "Delete",
+    "about_you": "Profiilisi",
+    "add_profile": "Lisää profiili",
+    "cancel": "Peruuta",
+    "confirm_password": "Vahvista salasana",
+    "continue": "Jatka",
+    "delete": "Poista",
     "delete_account": {
-      "body": "Permanently delete your account and all of your content.",
-      "error": "An error occurred while deleting your account. Please try again.",
+      "body": "Poista pysyvästi tilisi ja siihen liittyvä sisältö.",
+      "error": "Tilin poistamisessa tapahtui virhe. Ole hyvä ja yritä uudelleen.",
       "modal": {
-        "placeholder": "Enter your password",
-        "text_cant_be_undone": "Please be aware that this process cannot be undone, so proceed with caution.",
-        "text_contacts": "If you have any further questions or concerns, please do not hesitate to contact our support team.",
-        "text_data_erasure": "Please note that if you choose to proceed with this process, all of your personal data will be erased from our system. This includes any personal information you provided during the registration process, as well as any location and device information that we gathered during the authentication process. Additionally, all other personal information stored in various parts of our database will be deleted as well. However, please be aware that due to some legislations we are required to keep certain personal data as part of transaction and subscription records.",
-        "text_revoked_access": "Once the erasure is complete, all of your active accesses will be revoked, and any active login sessions, including this one, will be terminated. Your account information will no longer be accessible to our staff in any capacity.",
-        "title": "Enter password to continue",
-        "warning": "All active subscriptions that were purchased through a web browser will be automatically canceled upon erasure of personal data. However, if you purchased a subscription through iOS, Android, Roku, or Amazon apps, please be aware that it will not be canceled automatically. In this case, you will need to follow the usual subscription cancelation steps for each respective platform to manually cancel the subscription."
+        "placeholder": "Anna salasanasi",
+        "text_cant_be_undone": "Tätä toimintoa ei voi peruuttaa, oletko varma että haluat jatkaa?",
+        "text_contacts": "Jos sinulla on kysyttävää, asiakaspavelumme auttaa mielellään.",
+        "text_data_erasure": "Huomioi, että jos päätät jatkaa tämän prosessin kanssa, kaikki henkilötietosi poistetaan järjestelmästämme. Tähän sisältyvät kaikki henkilötiedot, jotka annoit rekisteröitymisen yhteydessä, sekä kaikki sijainti- ja laitetiedot, jotka keräsimme todennusprosessin aikana. Lisäksi kaikki muut henkilötiedot, jotka on tallennettu eri osiin tietokantaamme, poistetaan. Ole kuitenkin tietoinen, että tietyt lainsäädännöt edellyttävät meitä säilyttämään tiettyjä henkilötietoja osana tapahtuma- ja tilaustietueita.",
+        "text_revoked_access": "Kun tämä poisto on viety päätökseen, kaikki aktiiviset yhteydet ja kirjautumiset tiliisi tullaan katkaisemaan, tämä mukaan lukien. Tilitietoihisi pääsy ei ole enää tämän jälkeen mahdollista asikaspalvelulla tai muilla yrityksemme toimijoilla missään muodossa.",
+        "title": "Kirjoita salasana jatkaaksesi.",
+        "warning": "Aktiiviset selaimella tehdyt tilaukset peruutetaan automaattisesti tilin ja siihen liittyvän datan poiston yhteydessä. Tämä ei koske ostoksia iOS, Android, Roku tai Amazon sovelluksissa. Niissä tapaukissa teidän täytyy peruuttaa tilauksenne kyseisistä palveluista erikseen."
       },
-      "title": "Delete account"
+      "title": "Poista käyttäjätili"
     },
-    "edit_account": "Edit account",
-    "edit_information": "Edit information",
-    "edit_password": "Edit password",
-    "email": "Email",
+    "edit_account": "Muokkaa käyttäjätiliä",
+    "edit_information": "Muokkaa tietoja",
+    "edit_password": "Muuta salasana",
+    "email": "Sähköpostiosoite",
     "errors": {
-      "email_exists": "Email already exists!",
-      "email_update_not_supported": "Email update not supported",
-      "first_name_too_long": "Please limit First Name to 50 characters or fewer.",
-      "invalid_param_email": "Invalid email address!",
-      "invalid_password": "Password incorrect!",
-      "last_name_too_long": "Please limit Last Name to 50 characters or fewer.",
-      "please_enter_valid_email": "Please enter a valid email address.",
-      "unknown_error": "An unknown error occurred"
+      "email_exists": "Sähköpostiosoitteesi on jo rekisteröity!",
+      "email_update_not_supported": "Sähköpostiosoitteen päivittäminen ei ole mahdollista",
+      "first_name_too_long": "Etunimi liian pitkä, maksimi merkkimäärä 50 merkkiä.",
+      "invalid_param_email": "Virheellinen sähköpostiosoite!",
+      "invalid_password": "Virheellinen salasana!",
+      "last_name_too_long": "Sukunimi liian pitkä, maksimi merkkimäärä 50 merkkiä.",
+      "please_enter_valid_email": "Anna kelvollinen sähköpostiosoite.",
+      "unknown_error": "Tuntematon virhetilanne"
     },
-    "export_data_body": "Export all of your personal account data to <strong>{{email}}</strong> as an attachment.",
-    "export_data_error": "An error occurred while exporting your account data.",
-    "export_data_success": "Please check your email.",
-    "export_data_title": "Export account data",
-    "firstname": "First name",
-    "hide_password": "Hide password",
-    "lastname": "Last name",
-    "manage_profiles": "Manage profiles",
-    "password": "Password",
-    "save": "Save",
-    "security": "Password",
-    "terms_and_tracking": "Legal & Marketing",
-    "update_consents": "Update consents",
-    "view_password": "View password",
-    "who_is_watching": "Who’s watching?"
+    "export_data_body": "Lähetä kaikki henkilökohtaiset tilitietosi liitteenä kohteeseen <strong>{{email}}</strong>.",
+    "export_data_error": "Tapahtui virhe tilitietojesi vientiä yrittäessä.",
+    "export_data_success": "Ole hyvä ja tarkista sähköpostiosoitteesi.",
+    "export_data_title": "Vie tilidata",
+    "firstname": "Etunimi",
+    "hide_password": "Piilota salasana",
+    "lastname": "Sukunimi",
+    "manage_profiles": "Hallinnoi profiileja",
+    "password": "Salasana",
+    "save": "Tallenna",
+    "security": "Salasana",
+    "terms_and_tracking": "Käyttöehdot & mainonta",
+    "update_consents": "Päivitä luvat",
+    "view_password": "Näytä salasana",
+    "who_is_watching": "Kuka katselee?"
   },
   "favorites": {
-    "clear": "Clear favorites",
-    "clear_favorites_body": "You are about to clear all of your favorite videos. Are you sure?",
-    "clear_favorites_title": "Clear favorites?",
-    "no_favorites": "Your favorites are empty",
-    "not_found": "Favorites not found!",
-    "title": "Favorites"
+    "clear": "Tyhjennä suosikit",
+    "clear_favorites_body": "Olet tyhjentämässä suosikki videoitasi, oletko varma?",
+    "clear_favorites_title": "Tyhjennä suosikit?",
+    "no_favorites": "Suosikkilistasi on tyhjä",
+    "not_found": "Suosikkeja ei löytynyt!",
+    "title": "Suosikit"
   },
   "login": {
-    "field_required": "This field is required"
+    "field_required": "Tämä on pakollinen kenttä"
   },
   "nav": {
-    "account": "Account",
-    "add_profile": "Add new profile",
-    "favorites": "Favorites",
-    "logout": "Log out",
-    "payments": "Payments",
-    "profile": "Profile",
-    "settings": "Settings",
-    "switch_profiles": "Switch profiles"
+    "account": "Tili",
+    "add_profile": "Lisää uusi profiili",
+    "favorites": "Suosikit",
+    "logout": "Kirjaudu ulos",
+    "payments": "Maksut",
+    "profile": "Profiili",
+    "settings": "Asetukset",
+    "switch_profiles": "Vaihda profiilia"
   },
   "payment": {
-    "access_granted": "access granted",
-    "add_card_details": "Add card details",
-    "annual_subscription": "Annual subscription",
-    "billing_history": "Billing history",
-    "cancel_subscription": "Cancel subscription",
-    "card_number": "Card number",
-    "change_plan": "Change Plan",
-    "change_plan_error": "There was a problem saving your subscription plan change.",
-    "change_subscription": "Change subscription",
-    "complete_subscription": "Complete subscription",
-    "current_plan": "CURRENT PLAN",
-    "daily_subscription": "Daily subscription",
-    "downgrade_on": "Pending downgrade on {{date}}",
-    "downgrade_plan_success": "You've successfully changed the subscription plan. Your new plan will start after the end of the current cycle ({{date}}).",
-    "expiry_date": "Expiry date",
-    "granted_subscription": "Granted subscription",
-    "hidden_transactions_one": "One more transaction",
-    "hidden_transactions_other": "{{count}} more transactions",
-    "monthly_subscription": "Monthly subscription",
-    "next_billing_date_on": "Next billing date is on {{date}}",
-    "no_payment_methods": "No payment methods",
-    "no_subscription": "You have no subscription. Complete your subscription to start watching all movies and series.",
-    "no_transaction": "No transaction",
-    "no_transactions": "No transactions",
-    "other": "other",
-    "payment_method": "Payment method",
-    "pending_downgrade": "Pending downgrade",
-    "pending_offer_switch": "Will update to a \"{{title}}\" after the next billing date",
-    "price_paid_with": "{{price}} paid with {{method}}",
-    "price_paid_with_card": "Price paid with card",
-    "renew_subscription": "Renew subscription",
-    "security_code": "Security code",
-    "show_all": "Show all",
-    "show_receipt": "Show receipt",
-    "subscription_details": "Subscription details",
-    "subscription_expires_on": "This plan will expire on {{date}}",
-    "update_payment_details": "Update payment details",
-    "upgrade_plan_success": "You've successfully changed the subscription plan. You can enjoy your additional benefits immediately.",
-    "weekly_subscription": "Weekly subscription"
+    "access_granted": "pääsy myönnetty",
+    "add_card_details": "Lisää maksukortin tiedot",
+    "annual_subscription": "Vuosi tilaus",
+    "billing_history": "Laskutus historia",
+    "cancel_subscription": "Peruuta tilaus",
+    "card_number": "Kortin numero",
+    "change_plan": "Vaihda laskutusta",
+    "change_plan_error": "Tilauksen laskutusmuutoksen tallennus ei onnistunut.",
+    "change_subscription": "Vaihda tilaus",
+    "complete_subscription": "Vahvista tilaus",
+    "current_plan": "NYKYINEN LASKUTUS",
+    "daily_subscription": "Päivä tilaus",
+    "downgrade_on": "Tilauksen muutos astuu voimaan {{date}}",
+    "downgrade_plan_success": "Olet onnistuneesti vaihtanut tilaustasi. Uusi suunniteltu jakso alkaa nykyisen jakson päätyttyä ({{date}}).",
+    "expiry_date": "Päättymispäivämäärä",
+    "granted_subscription": "Tilaus vahvistettu",
+    "hidden_transactions_one": "Vielä yksi tapahtuma",
+    "hidden_transactions_other": "{{count}} tapahtumaa",
+    "monthly_subscription": "Kuukausitilaus",
+    "next_billing_date_on": "Seuraava laskutuspäivä {{date}}",
+    "no_payment_methods": "Maksutapa puuttuu",
+    "no_subscription": "Ei voimassa olevia tilauksia. Tee tilaus aloittaaksesi katselu.",
+    "no_transaction": "Ei tapahtumaa",
+    "no_transactions": "Ei tapahtumia",
+    "other": "toinen",
+    "payment_method": "Maksutapa",
+    "pending_downgrade": "Odottava tilauksen muutos tapahtuma",
+    "pending_offer_switch": "Tilaus \"{{title}}\" päivittyy seuraavan laskutuksen jälkeen",
+    "price_paid_with": "{{price}} maksettu {{method}}",
+    "price_paid_with_card": "Hinta maksettu kortilla",
+    "renew_subscription": "Uusi tilauksesi",
+    "security_code": "Turvakoodi",
+    "show_all": "Näytä kaikki",
+    "show_receipt": "Näytä kuitti",
+    "subscription_details": "Tilausen tiedot",
+    "subscription_expires_on": "Tämä tilaus päättyy {{date}}",
+    "update_payment_details": "Päivitä maksutiedot",
+    "upgrade_plan_success": "Tilauksen yksityiskohdat päivitetty onnistuneesti. Voit nauttia uusista sisällöistä välittömästi.",
+    "weekly_subscription": "Viikkotilaus"
   },
   "profile": {
-    "adult": "Adult",
+    "adult": "Aikuinen",
     "avatar": "Avatar",
-    "content_rating": "Content rating",
-    "create": "Create profile",
-    "create_message": "Create your profile",
-    "delete": "Delete profile",
-    "delete_confirmation": "Are you sure you want to delete your profile? You will lose all you watch history and settings connected to this profile.",
-    "delete_description": "Permanently delete your profile along with all of your watch history and favorites.",
-    "delete_main": "The main profile cannot be deleted because it’s linked to your account's watch history and favorites.",
-    "description": "Profiles allow you to watch content and assemble your own personal collection of favorites.",
-    "form_error": "Something went wrong. Please try again later.",
-    "info": "Profile info",
-    "kids": "Kids",
-    "name": "User name",
-    "no_one_watching": "There’s no one watching.",
+    "content_rating": "Sisällön arvio",
+    "create": "Luo profiili",
+    "create_message": "Luo profiilisi",
+    "delete": "Poista profiili",
+    "delete_confirmation": "Haluatko jatkaa ja poistaa profiilisi? Kaikki tämän profiilin historia- ja asetustiedot poistetaan.",
+    "delete_description": "Poista pysyvästi profiilisi, katselu historiasi ja suosikkisi.",
+    "delete_main": "Pääprofiilia ei voi poistaa, koska se on linkitetty tilisi katseluhistoriaan ja suosikkeihin.",
+    "description": "Profiili mahdollistaa sisällön katsomisen ja omien suosikkien keräämisen käytön sujuvoittamiseksi.",
+    "form_error": "Jokin meni vikaan, yritä myöhemmin uudelleen.",
+    "info": "Profiilin tiedot",
+    "kids": "Lapset",
+    "name": "Käyttäjänimi",
+    "no_one_watching": "Kukaan ei katsele tällä hetkellä.",
     "validation": {
       "name": {
-        "required": "Please enter a name for your profile.",
-        "too_short": "Please enter at least 2 characters."
+        "required": "Lisää nimi profiilillesi.",
+        "too_short": "Nimen täytyy olla vähintään kaksi merkkiä pitkä."
       }
     }
   }
