--- a/public/locales/fi/video.json
+++ b/public/locales/fi/video.json
@@ -1,27 +1,27 @@
 {
-  "add_to_favorites": "Add to favorites",
+  "add_to_favorites": "Lisää suosikkeihin",
   "all_seasons": "Kaikki kaudet",
   "buy": "Osta",
-  "complete_your_subscription": "Complete your subscription",
-  "continue_watching": "Continue watching",
-  "copied_url": "Copied url",
-  "current_episode": "Current episode",
-  "current_video": "Current video",
+  "complete_your_subscription": "Saata tilaustoiminto loppuun",
+  "continue_watching": "Jatka katsomista",
+  "copied_url": "Url osoite kopioitu",
+  "current_episode": "Nykyinen jakso",
+  "current_video": "Nykyinen video",
   "episode": "j",
-  "episodes": "Episodes",
-  "favorite": "Favorite",
-  "favorites_warning": "Maximum amount of favorite videos exceeded. You can only add up to {{maxCount}} favorite videos. Please delete one and repeat the operation.",
-  "live": "Live",
-  "remove_from_favorites": "Remove from favorites",
-  "season": "season",
-  "season_number_filter_template": "Season {{seasonNumber}}",
-  "series_error": "An error occurred while requesting series",
-  "share": "Share",
-  "share_video": "Share this video",
-  "sign_up_to_start_watching": "Sign up to start watching!",
-  "start_watching": "Start watching",
-  "total_episodes_one": "{{count}} episode",
-  "total_episodes_other": "{{count}} episodes",
-  "trailer": "Trailer",
-  "watch_trailer": "Watch the trailer"
+  "episodes": "Jaksot",
+  "favorite": "Suosikki",
+  "favorites_warning": "Liian monta suosikkivideota valittu. Voit lisätä maksimissaan {{maxCount}} suosikkivideota. Ole hyvä ja vähennä aikaisempia suosikkejasi ja lisää uusi suosikkisi uudelleen.",
+  "live": "Suora",
+  "remove_from_favorites": "Poista suosikeista",
+  "season": "kausi",
+  "season_number_filter_template": "Kausi {{seasonNumber}}",
+  "series_error": "Kauden latauksessa tapahtui virhe",
+  "share": "Jaa",
+  "share_video": "Jaa tämä video",
+  "sign_up_to_start_watching": "Kirjaudu katsoaksesi tämä video!",
+  "start_watching": "Aloita katselu",
+  "total_episodes_one": "{{count}} jakso",
+  "total_episodes_other": "{{count}} jaksoa",
+  "trailer": "Traileri",
+  "watch_trailer": "Katso traileri"
 }
