--- a/public/locales/fi/epg.json
+++ b/public/locales/fi/epg.json
@@ -1,4 +1,4 @@
 {
-  "on_channel": "On {{name}}",
-  "start_from_beginning": "Watch from start"
+  "on_channel": "Kanavalla {{name}}",
+  "start_from_beginning": "Aloita katselu alusta"
 }
